# radiarch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
demo/: index.html
docs/: architecture.md  (+5 more)
service/: alembic.ini  main.py  pyproject.toml
service/migrations/: env.py
service/migrations/versions/: a0d6cb2919ee_initial_tables.py
service/opentps/: ATTRIBUTION.md  LICENSE  __init__.py
service/opentps/core/: __init__.py
service/opentps/core/data/: _dvh.py  _patient.py  _roiContour.py  _rtStruct.py  _sparseBeamlets.py
service/opentps/core/data/MCsquare/: _bdl.py  _mcsquareConfig.py
service/opentps/core/data/dynamicData/: _dynamic3DSequence.py
service/opentps/core/io/: CCCdoseEngineIO.py  dataExporter.py  dataLoader.py  dicomIO.py  mcsquareIO.py  mhdIO.py  pldIO.py  serializedObjectIO.py  sitkIO.py
service/opentps/core/utils/: programSettings.py
service/radiarch/: __init__.py  app.py  client.py  config.py
service/radiarch/adapters/: __init__.py  dicomweb.py  orthanc.py  sample_data.py
service/radiarch/api/routes/: artifacts.py  info.py  jobs.py  plans.py  sessions.py  simulations.py  workflows.py
service/radiarch/core/: database.py  db_models.py  planner.py  simulator.py  store.py
service/radiarch/core/workflows/: __init__.py  _helpers.py  photon_ccc.py  proton_basic.py  proton_optimized.py  proton_robust.py
service/radiarch/models/: artifact.py  job.py  plan.py  simulation.py
service/radiarch/tasks/: celery_app.py  plan_tasks.py
service/tests/: test_api_e2e.py  test_client.py  test_opentps_integration.py
(+416 files in other folders)
