[project]
name = "radiarch"
version = "0.1.0"
description = "Radiarch TPS service (FastAPI backend powered by OpenTPS)"
authors = [{ name = "Radiarch Team" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.111.0",
    "uvicorn[standard]~=0.30.0",
    "pydantic~=2.7",
    "pydantic-settings~=2.4",
    "httpx~=0.27.0",
    "python-multipart~=0.0.9",
    "loguru~=0.7.2",
    "celery~=5.4.0",
    "redis~=5.0.4",
    "SQLAlchemy~=2.0",
    "alembic~=1.13.2",
    "psycopg[binary]~=3.2",
    "dicomweb-client~=0.59.0",
    "pydicom~=2.4.4",
    "numpy~=1.26",
    "scipy~=1.12",
    "pandas~=2.2",
    "SimpleITK~=2.2",
]

[project.optional-dependencies]
imaging = [
    "scikit-image>=0.21",
]

dev = [
    "pytest~=8.1",
    "pytest-asyncio~=0.23",
    "httpx~=0.27.0",
    "ruff~=0.3.0",
    "black~=24.4",
    "mypy~=1.9"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
